# pares-radix

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  COMMIT_MSG.txt  Cargo.toml  Dockerfile  Dockerfile.prebuilt  LICENSE  README.md  REWIRING-PLAN.md  ROADMAP.md  TESTING.md  docker-compose.prebuilt.yml  docker-compose.yml  eslint.config.js  flake.nix  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
crates/agenda/: Cargo.toml
crates/agenda/src/: issue.rs  lib.rs  manager.rs  scheduler.rs
crates/audit/: Cargo.toml
crates/audit/src/: event.rs  export.rs  lib.rs  query.rs  retention.rs  store.rs
crates/bitnet/: Cargo.toml
crates/bitnet/src/: classifier_backend.rs  error.rs  lib.rs  model_client.rs  runner.rs
crates/channels/: Cargo.toml
crates/channels/src/: adapter.rs  group_context.rs  http_spine.rs  lib.rs  stdin.rs  stdio_spine.rs  tauri_ipc.rs  telegram.rs  telegram_spine.rs
crates/channels/src/threading/: http.rs  keyboard.rs  mod.rs  stdio.rs  tauri.rs  telegram.rs  tui.rs
crates/channels/tests/: e2e.rs  http_channel_verify.rs
crates/cli/: Cargo.toml  build.rs
crates/cli-api/: Cargo.toml
crates/cli-api/src/: lib.rs
crates/cli-runtime/: Cargo.toml
crates/cli-runtime/src/: bitnet_classifier.rs  config.rs  lib.rs
crates/cli/src/: bitnet_classifier.rs  command_provider.rs  config.rs  lib.rs  main.rs  migrate.rs  openclaw.rs  px_config.rs
crates/core/: Cargo.toml
crates/core/examples/: shadow_smoke.rs
crates/core/src/: agent.rs  channel_contract.rs  chronos.rs  commands.rs  error_display.rs  event.rs  event_spine.rs  executor.rs  features.rs  health.rs  heartbeat.rs  lib.rs  license.rs  model.rs  model_chain.rs  model_download.rs  optimization.rs  otel.rs  personality.rs  pii_guard.rs  procedure.rs  procedures.rs  prompt_builder.rs  px_adapter.rs  secrets.rs  session.rs  shell_executor.rs  state.rs  subagent_spawn.rs  task.rs  task_executor.rs  task_loop.rs  task_manager.rs  telemetry.rs  tool_governance.rs
crates/core/src/auth/: copilot.rs
crates/core/src/cerebellum/: actions.rs  bridge.rs  classifier.rs  context_manager.rs  dataflow_bridge.rs  invoke.rs  mod.rs  pipeline.rs  px_bridge.rs  router.rs
crates/core/src/delegation/: aggregator.rs  broker.rs  builtin.rs  context.rs  manager.rs  mod.rs  registry.rs  spawner_impl.rs  steering.rs
crates/core/src/handlers/: auto_capture.rs  auto_recall.rs  on_message.rs  on_state_change.rs  on_timer.rs
crates/core/src/lifecycle/: engine.rs  facts.rs  mod.rs  rules.rs
crates/core/src/memory/: correction.rs  embed.rs  entry.rs  mod.rs  quality.rs  store.rs
crates/core/src/model_pool/: discovery.rs  exclusion.rs  mod.rs  pool.rs  selection.rs  telegram.rs  types.rs
crates/core/src/plugins/: coding_agent.rs  crud.rs  error.rs  executor.rs  git_adapter.rs  manifest.rs  mod.rs  runtime.rs
crates/core/src/praxis/: constraints.rs  (+5 more)
crates/core/tests/: integration_test.rs  memory_integration.rs  otel_integration.rs  shadow_inert.rs  spine_integration.rs  streaming_bridge_test.rs
crates/marketplace/: Cargo.toml
crates/marketplace/src/: adapter.rs  cli.rs  discovery.rs  installer.rs  lib.rs  lora_types.rs  permissions.rs  ratings.rs  security.rs  skill_category.rs  update.rs
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: client.rs  error.rs  lib.rs  openai.rs  protocol.rs
crates/mcp-client/tests/: mock_server.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: app_metrics.rs  browser.rs  handler.rs  lib.rs  orchestration_test.rs  px_action_bridge.rs  radix_handler.rs  server.rs
crates/models/: Cargo.toml
crates/models/src/: client.rs  config.rs  error.rs  lib.rs  router.rs  streaming.rs  types.rs
crates/models/tests/: integration_test.rs
crates/omniscient/: Cargo.toml
crates/omniscient/src/: enrichment.rs  extractor.rs  file_node.rs  lib.rs  plugin.rs  query.rs  scanner.rs  store.rs
crates/praxis/: Cargo.toml
crates/praxis-lang/: Cargo.toml
crates/praxis-lang/examples/: parse_test.rs
crates/praxis-lang/src/: builder_test.rs  compiler.rs  executor.rs  grammar.pest  lib.rs  lint.rs
crates/praxis/examples/: parse_test.rs
crates/praxis/src/: audit.rs  factory.rs  lib.rs  module.rs  rule.rs
crates/praxis/tests/: async_executor_integration.rs  async_executor_stress.rs  integration_compose_resolver.rs  integration_lint_e2e.rs  integration_px_files.rs  px_first_enforcement.rs
crates/privacy/: Cargo.toml
crates/privacy/src/: lib.rs
crates/radix-core/: Cargo.toml
crates/radix-core/src/: approval.rs  channel_contract.rs  chronos.rs  classifier.rs  content_store.rs  error_display.rs  event_spine.rs  executor.rs  lib.rs  license.rs  memory.rs  memory_client.rs  model.rs  otel.rs  otel_metrics.rs  pluresdb_bridge.rs  procedure.rs  px_adapter.rs  secrets.rs  setup.rs  source.rs  state.rs  task.rs  task_executor.rs  task_handoff.rs  task_manager.rs
crates/radix-core/tests/: briefing_px_loads.rs  completion_seam_px_loads.rs
crates/rector/: Cargo.toml
crates/rector/src/: cluster.rs  deployer.rs  discovery.rs  lib.rs  node.rs  orchestrator.rs  px_parser.rs  scheduler.rs  workload.rs
crates/sync/: Cargo.toml
crates/sync/src/: conflict.rs  engine.rs  lan.rs  lib.rs  pairing.rs  peer.rs  queue.rs  topic.rs
crates/tauri-app/: Cargo.toml  flake.nix  tauri.conf.json
crates/tauri-app/capabilities/: default.json
crates/tauri-app/icons/: icon.icns
crates/tauri-app/src/: commands.rs  lib.rs  main.rs  mcp.rs  migration.rs  notifications.rs  plugins.rs  procedures.rs  settings.rs  state.rs  telemetry.rs  tray.rs  wizard.rs
crates/tauri-app/ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  ui.rs
crates/tui/tests/: keyboard_shortcuts.rs  session_persistence.rs  session_switch_persistence.rs
src-tauri/: Cargo.toml  make-icon.ps1  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+553 files in other folders)
