[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/core",
    "crates/channels",
    "crates/models",
    "crates/mcp-client",
    "crates/cli",
    "crates/privacy",
    "crates/marketplace",
    "crates/agenda",
    "crates/praxis",
    "crates/sync",
    "crates/audit",
    "crates/tauri-app",
    "crates/tui",
    "crates/bitnet-sys",
    "crates/bitnet",
    "crates/rector",
    "crates/omniscient",
    "crates/mcp-server",
]

[workspace.package]
version = "1.44.35"
edition = "2021"
license = "BSL-1.1"
repository = "https://github.com/plures/pares-radix"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
html2text = "0.17"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
teloxide = { version = "0.17", features = ["macros", "throttle"] }
clap = { version = "4", features = ["derive", "env"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-shell = "2"
walkdir = "2"
toml = "0.8"
libc = "0.2"
