[workspace]
resolver = "2"
members = [
    "crates/radix-core",
    "crates/mcp-client",
    "crates/cli",
    "crates/cli-api",
    "crates/privacy",
    "crates/marketplace",
    "crates/agenda",
    "crates/praxis",
    "crates/sync",
    "crates/audit",
    "crates/bitnet-sys",
    "crates/rector",
    "crates/omniscient",
    "src-tauri",
]

[workspace.package]
version = "1.55.9"
edition = "2021"
license = "BSL-1.1"
repository = "https://github.com/plures/pares-radix"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
html2text = "0.17"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
teloxide = { version = "0.17", features = ["macros", "throttle"] }
clap = { version = "4", features = ["derive", "env"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
walkdir = "2"
toml = "0.8"
libc = "0.2"

# Size-optimized release profile (applies to the whole graph). Per
# development-guide/design/TAURI-BEST-PRACTICES.md §2 — the single biggest lever
# on installer size. Slows release builds, which is why CI caches target/ hard.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
