[package]
name = "pares-radix"
version = "0.1.0"
description = "Pares Radix — Tauri 2 desktop shell (events not commands)"
authors = ["Plures"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "pares_radix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pares-radix"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
