[package]
name = "pares-radix"
version = "0.1.0"
description = "Pares Radix — Tauri 2 desktop shell (events not commands)"
authors = ["Plures"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "pares_radix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pares-radix"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-shell.workspace = true
serde.workspace = true
serde_json.workspace = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
