[package]
name = "pares-agens-bitnet"
description = "Safe Rust wrapper for bitnet.cpp — local BitNet CPU inference for Pares Agens"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Enable native bitnet.cpp FFI linkage.  Requires the third_party/bitnet
# submodule and CMake ≥ 3.21 to be present.  Without this feature every
# public function returns InferenceError::NativeUnavailable.
inference = ["pares-agens-bitnet-sys/native"]
model-client = ["dep:pares-agens-core", "dep:async-trait", "dep:tokio", "dep:tracing"]

[dependencies]
pares-agens-bitnet-sys = { path = "../bitnet-sys" }
pares-agens-core = { path = "../core", optional = true }
async-trait = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
thiserror = "2"

[dev-dependencies]
