[package]
name = "pares-agens-bitnet"
description = "Safe Rust wrapper for bitnet.cpp — local BitNet CPU inference for Pares Agens"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Enable native bitnet.cpp FFI linkage.  Requires the third_party/bitnet
# submodule and CMake ≥ 3.21 to be present.  Without this feature every
# public function returns InferenceError::NativeUnavailable.
inference = ["pares-agens-bitnet-sys/native"]
# GPU acceleration backends (each implies `inference`).
rocm = ["inference", "pares-agens-bitnet-sys/rocm"]
cuda = ["inference", "pares-agens-bitnet-sys/cuda"]
vulkan = ["inference", "pares-agens-bitnet-sys/vulkan"]
model-client = ["dep:pares-agens-core", "dep:async-trait", "dep:tokio", "dep:tracing"]
# Enable the ClassifierBackend implementation for cerebellum message classification.
classifier = ["model-client"]

[dependencies]
pares-agens-bitnet-sys = { path = "../bitnet-sys" }
pares-agens-core = { path = "../core", optional = true }
async-trait = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
thiserror = "2"

[dev-dependencies]
