[package]
name = "pares-radix-cli-api"
description = "Plugin command-surface API (CommandProvider trait) for the Pares Radix host CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "pares_radix_cli_api"
path = "src/lib.rs"

# Intentionally minimal dependency surface: this crate is the seam that an
# external plugin (pares-agens) depends on to contribute clap subcommands to the
# host without pulling the 297KB host binary. Keep deps to clap + async-trait +
# thiserror ONLY. Do NOT add agent/model/host crates here.
[dependencies]
clap.workspace = true
async-trait.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
