[package]
name = "pares-radix-cli"
description = "Pares Radix OpenClaw migration library (migrate/openclaw importers)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "pares_radix_migrate"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
pares-agens-core = { path = "../core", features = ["embeddings"] }

[dev-dependencies]
tempfile = "3"
