[package]
name = "pares-agens-core"
description = "Core event loop and procedure executor for Pares Agens"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
## Enable the `VaultSecretStore` backed by plures-vault encrypted storage.
##
## When this feature is active, a `vault-core` dependency is pulled from the
## plures-vault git repository.  The default build omits this dependency so
## that `cargo check --workspace` succeeds without requiring the vault crate's
## transitive dependency tree.
vault = ["dep:vault-core"]

## Enable native fastembed embeddings via PluresDB.
## When active, `PluresDbStore::open_with_embeddings()` is available.
## Requires the `embeddings` feature on the `pluresdb` dependency.
embeddings = []

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
uuid.workspace = true
tracing.workspace = true
chrono.workspace = true
thiserror.workspace = true
reqwest.workspace = true
semver = "1"
toml = "0.8"
base64 = "0.22"
sha2 = "0.10"
subtle = "2"
pares-agens-privacy = { path = "../privacy" }
walkdir.workspace = true
pares-agens-praxis = { path = "../praxis" }
pluresdb = { git = "https://github.com/plures/pluresdb", rev = "111dc919c8c2f1d4da7a1b4a1bac0d5a73adf7a3", features = ["embeddings"] }
pluresdb-procedures = { git = "https://github.com/plures/pluresdb", rev = "111dc919c8c2f1d4da7a1b4a1bac0d5a73adf7a3" }
pluresdb-sync = { git = "https://github.com/plures/pluresdb", rev = "407917e8b73c3924b7860df7c0eaa941d9338566" }
pluresdb-sea = { git = "https://github.com/plures/pluresdb", rev = "111dc919c8c2f1d4da7a1b4a1bac0d5a73adf7a3" }
vault-core = { git = "https://github.com/plures/plures-vault", rev = "d4e4783ddd14f63af2699ea97f29ca5895ef6590", package = "vault-core", optional = true }
pares-agens-audit = { path = "../audit" }

[dev-dependencies]
tempfile = "3"
