[package]
name = "pares-agens-core"
description = "Core event loop and procedure executor for Pares Agens"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
## Enable the `VaultSecretStore` backed by plures-vault encrypted storage.
##
## When this feature is active, a `vault-core` dependency is pulled from the
## plures-vault git repository.  The default build omits this dependency so
## that `cargo check --workspace` succeeds without requiring the vault crate's
## transitive dependency tree.
vault = ["dep:vault-core"]

## Enable native fastembed embeddings via PluresDB.
## When active, `PluresDbStore::open_with_embeddings()` is available.
## Requires the `embeddings` feature on the `pluresdb` dependency.
embeddings = []

## Enable OpenTelemetry OTLP trace export.
## Adds gRPC span exporter that integrates with the tracing subscriber.
## Configure via OTEL_EXPORTER_OTLP_ENDPOINT and OTEL_SERVICE_NAME env vars.
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
uuid.workspace = true
tracing.workspace = true
chrono.workspace = true
hostname = "0.4"
thiserror.workspace = true
reqwest.workspace = true
semver = "1"
toml = "0.8"
base64 = "0.22"
sha2 = "0.10"
subtle = "2"
pares-agens-privacy = { path = "../privacy" }
walkdir.workspace = true
pares-radix-praxis = { path = "../praxis" }
pluresdb = { git = "https://github.com/plures/pluresdb", rev = "111dc919c8c2f1d4da7a1b4a1bac0d5a73adf7a3", features = ["embeddings"] }
pluresdb-procedures = { git = "https://github.com/plures/pluresdb", rev = "111dc919c8c2f1d4da7a1b4a1bac0d5a73adf7a3" }
pluresdb-sync = { git = "https://github.com/plures/pluresdb", rev = "407917e8b73c3924b7860df7c0eaa941d9338566" }
pluresdb-sea = { git = "https://github.com/plures/pluresdb", rev = "111dc919c8c2f1d4da7a1b4a1bac0d5a73adf7a3" }
vault-core = { git = "https://github.com/plures/plures-vault", rev = "d4e4783ddd14f63af2699ea97f29ca5895ef6590", package = "vault-core", optional = true }
pares-agens-audit = { path = "../audit" }

regex = "1"
regex-lite = "0.1"
futures-util = "0.3"

# OpenTelemetry (optional, behind "otel" feature)
opentelemetry = { version = "0.28", optional = true }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "http-proto", "reqwest-blocking-client"], optional = true }
opentelemetry-semantic-conventions = { version = "0.28", optional = true }
tracing-opentelemetry = { version = "0.29", optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio", "testing"] }
opentelemetry = { version = "0.28" }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-opentelemetry = "0.29"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
