[package]
name = "pares-agens-marketplace"
description = "Marketplace crate for skill and extension discovery, installation, and security validation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
