[package]
name = "pares-radix-mcp-client"
description = "MCP (Model Context Protocol) client for tool orchestration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
pares-agens-core = { path = "../core" }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full", "test-util"] }
