[package]
name = "mcp-server"
description = "MCP (Model Context Protocol) server — expose pares-radix tools to external agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
html2text.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
urlencoding = "2"
mcp-client = { path = "../mcp-client" }
pares-agens-core = { path = "../core" }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
