[package]
name = "mcp-server"
description = "MCP (Model Context Protocol) server — expose pares-radix tools to external agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
html2text.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
urlencoding = "2"
base64 = "0.22"
chrono.workspace = true
tokio-tungstenite = "0.26"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
mcp-client = { path = "../mcp-client" }
pares-agens-core = { path = "../core" }
pares-agens-agenda = { path = "../agenda" }
pares-agens-praxis = { path = "../praxis" }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
