[package]
name = "pares-radix-mcp-server"
description = "MCP (Model Context Protocol) server — expose pares-radix tools to external agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
html2text.workspace = true
reqwest.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
urlencoding = "2"
base64 = "0.22"
chrono.workspace = true
tokio-tungstenite = "0.26"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
pares-radix-mcp-client = { path = "../mcp-client" }
opentelemetry = "0.28"
pares-agens-core = { path = "../core" }
pares-agens-agenda = { path = "../agenda" }
pares-radix-praxis = { path = "../praxis" }
praxis-native = { git = "https://github.com/plures/praxis.git", rev = "24bf2a6", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
pluresdb = { git = "https://github.com/plures/pluresdb", rev = "111dc919c8c2f1d4da7a1b4a1bac0d5a73adf7a3", features = ["embeddings"] }
