[package]
name = "pares-models"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenAI-compatible model router for Pares Agens"

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
pares-agens-core = { path = "../core" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
wiremock = "0.6"
