[package]
name = "praxis-lang"
description = "The .px intent language — parser, compiler, executor, and tooling"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["time"] }
pest = "2"
pest_derive = "2"
notify = "8"
walkdir = "2"
tracing = "0.1"
futures = "0.3"
regex = "1"

[dev-dependencies]
futures = "0.3"
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros", "time"] }
