[package]
name = "pares-radix-praxis"
description = "Declarative logic management for Pares Agens — rules factory, typed RuleResult, PraxisModules, and completeness audits"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
praxis-native = { git = "https://github.com/plures/praxis.git", rev = "4873c41", default-features = false }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["time"] }
pest = "2"
pest_derive = "2"
notify = "8"
walkdir = "2"
tracing = "0.1"
futures = "0.3"
regex = "1"
praxis-lang = { path = "../praxis-lang" }

[dev-dependencies]
futures = "0.3"
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros", "time"] }
