[package]
name = "pares-radix-praxis"
description = "Declarative logic management for Pares Agens — rules factory, typed RuleResult, PraxisModules, and completeness audits"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
praxis-native = { git = "https://github.com/plures/praxis.git", rev = "ff2a2bb", default-features = false }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing = "0.1"
futures = "0.3"
regex = "1"

[dev-dependencies]
futures = "0.3"
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros", "time"] }
