[package]
name = "pares-radix-praxis"
description = "Declarative logic management for Pares Agens — rules factory, typed RuleResult, PraxisModules, and completeness audits"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pluresdb-px = { git = "https://github.com/plures/pluresdb", rev = "c3de16a" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing = "0.1"

[dev-dependencies]
futures = "0.3"
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros", "time"] }
