[package]
name = "pares-agens-privacy"
description = "Privacy filter and PII protection for Pares Agens training data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
