[package]
name = "pares-radix-core"
description = "Platform runtime (event loop, procedure executor, state, plugins) for Pares Radix"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "pares_radix_core"

[features]
## Enable the spine integration test suite.
spine = []

## Enable the `VaultSecretStore` backed by plures-vault encrypted storage.
vault = ["dep:vault-core"]

## Enable native fastembed embeddings via PluresDB.
embeddings = []

## Enable OpenTelemetry OTLP trace export.
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
uuid.workspace = true
tracing.workspace = true
chrono.workspace = true
hostname = "0.4"
thiserror.workspace = true
reqwest.workspace = true
semver = "1"
toml = "0.8"
base64 = "0.23"
sha2 = "0.10"
subtle = "2"
pares-radix-privacy = { path = "../privacy" }
walkdir.workspace = true
pares-radix-praxis = { path = "../praxis" }
pluresdb = { git = "https://github.com/plures/pluresdb", rev = "d08f88b5410384235f586320bafb89c4be3aa7a1", features = ["embeddings"] }
pluresdb-procedures = { git = "https://github.com/plures/pluresdb", rev = "d08f88b5410384235f586320bafb89c4be3aa7a1" }
pluresdb-sync = { git = "https://github.com/plures/pluresdb", rev = "d08f88b5410384235f586320bafb89c4be3aa7a1" }
pluresdb-sea = { git = "https://github.com/plures/pluresdb", rev = "d08f88b5410384235f586320bafb89c4be3aa7a1" }
vault-core = { git = "https://github.com/plures/plures-vault", rev = "d4e4783ddd14f63af2699ea97f29ca5895ef6590", package = "vault-core", optional = true }
pares-radix-audit = { path = "../audit" }

regex = "1"
regex-lite = "0.1"
futures-util = "0.3"

# OpenTelemetry (optional, behind "otel" feature)
opentelemetry = { version = "0.28", optional = true }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "http-proto", "reqwest-blocking-client"], optional = true }
opentelemetry-semantic-conventions = { version = "0.28", optional = true }
tracing-opentelemetry = { version = "0.29", optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio", "testing"] }
opentelemetry = { version = "0.28" }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-opentelemetry = "0.29"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
