[package]
name = "pares-rector"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Infrastructure orchestrator — parses .px constraint files, schedules workloads, self-heals"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
