[package]
name = "pares-agens-sync"
description = "P2P device sync via Hyperswarm DHT for Pares Agens — offline-first, CRDT-merge, bandwidth-aware"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
