[package]
name = "pares-radix-tauri"
description = "Tauri desktop application for Pares Agens"
version = "0.5.0"
edition = "2021"
license = "BSL-1.1"
repository = "https://github.com/plures/pares-radix"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-notification = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
pares-agens-core = { path = "../core" }
async-trait = "0.1"
pares-agens-channels = { path = "../channels" }
pares-radix-migrate = { path = "../cli", package = "pares-radix-cli" }
pares-models = { path = "../models" }
pares-radix-mcp-client = { path = "../mcp-client" }

[dependencies.tauri-plugin-tui]
git = "https://github.com/plures/svelte-ratatui.git"
rev = "480e286"
optional = true

[features]
default = []
tui = ["tauri-plugin-tui"]
